--- a/MovieApp.csproj
+++ b/MovieApp.csproj
@@ -48,8 +48,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Appacitive.Sdk.WindowsPhone7">
-      <HintPath>..\packages\Appacitive.0.9.8\lib\sl3-wp\Appacitive.Sdk.WindowsPhone7.dll</HintPath>
+    <Reference Include="Appacitive.Sdk">
+      <HintPath>..\packages\Appacitive.0.9.9\lib\sl3-wp\Appacitive.Sdk.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Controls, Version=7.0.0.0, Culture=neutral, PublicKeyToken=24eec0d8c86cda1e, processorArchitecture=MSIL" />
